# apiauth

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-code-review.yml  ci.yml  publish.yml  test.yml
docs/: release-findings.md
src/apiauth/: __init__.py  cli.py  keygen.py  keystore.py  verify.py
tests/: test_cli.py  test_readme_install.py  test_verify_expiry_failclosed.py
