[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiauth"
version = "0.2.0"
description = "CLI tool for API key and JWT lifecycle management with encrypted local store"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Revenue Holdings", email = "engineering@revenueholdings.dev"}]

keywords = ["api-keys", "jwt", "auth", "cli", "security", "key-management"]
classifiers = [
 "Development Status :: 4 - Beta",
 "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.4.1",
    "cryptography>=48.0.1",
    "pyjwt>=2.12.0",
    "rich>=13.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.urls]
Homepage = "https://github.com/Coding-Dev-Tools/apiauth"
Documentation = "https://github.com/Coding-Dev-Tools/apiauth#readme"
Repository = "https://github.com/Coding-Dev-Tools/apiauth"
Issues = "https://github.com/Coding-Dev-Tools/apiauth/issues"
Changelog = "https://github.com/Coding-Dev-Tools/apiauth/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
    "freezegun>=1.2.0",
]

[project.scripts]
apiauth = "apiauth.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["py.typed"]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["*"]
